fix game/history without wallet
