# docs/swagger.json
@@ -332,7 +332,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/general.GameRecord"
+                                "$ref": "#/definitions/general.GameHistoryResponse"
                             }
                         }
                     },
@@ -2446,6 +2446,44 @@
                 "Expired",
                 "Depleted"
             ]
+        },
+        "general.GameHistoryResponse": {
+            "type": "object",
+            "properties": {
+                "BetAmount": {
+                    "type": "number"
+                },
+                "Counter": {
+                    "type": "integer"
+                },
+                "Player1Earnings": {
+                    "type": "number"
+                },
+                "Player1Name": {
+                    "type": "string"
+                },
+                "Player1Score": {
+                    "type": "integer"
+                },
+                "Player2Earnings": {
+                    "type": "number"
+                },
+                "Player2Name": {
+                    "type": "string"
+                },
+                "Player2Score": {
+                    "type": "integer"
+                },
+                "TimePlayed": {
+                    "type": "string"
+                },
+                "TokenType": {
+                    "type": "string"
+                },
+                "Winner": {
+                    "type": "string"
+                }
+            }
         },
         "general.GameRecord": {
             "type": "object",
